<resources>
    <string name="app_name">Homework3</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Get Started</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo">TODO</string>
    <string name="not_registered">Not registered?</string>
    <string name="get_started">Get Started</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="chat">Chat</string>
    <string name="password">Password</string>
</resources>